@@ -28,5 +28,6 @@ scanners.sgml
 separate.sgml
 simple.sgml
 sourcecode.sgml
+tasks.sgml
 troubleshoot.sgml
 variants.sgml
